cmake_minimum_required(VERSION 3.24)
project(CH32_Bike_Overland C)

set(CMAKE_C_STANDARD 11)

include_directories(2.Firmware/1.CH32V307VCT6/libraries/sdk/Core)
include_directories(2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral)
include_directories(2.Firmware/1.CH32V307VCT6/libraries/zf_common)
include_directories(2.Firmware/1.CH32V307VCT6/libraries/zf_device)
include_directories(2.Firmware/1.CH32V307VCT6/libraries/zf_driver)
include_directories(2.Firmware/1.CH32V307VCT6/project/code)
include_directories(2.Firmware/1.CH32V307VCT6/project/code/INS)
include_directories(2.Firmware/1.CH32V307VCT6/project/user/inc)
include_directories(2.Firmware/2.BLDC/bldc_config)
include_directories(2.Firmware/2.BLDC/bldc_hardware)
include_directories(2.Firmware/2.BLDC/bldc_software)
include_directories(2.Firmware/2.BLDC/project/code)
include_directories(2.Firmware/2.BLDC/project/user/inc)
include_directories(2.Firmware/2.BLDC/seekfree_libraries/sdk/Core)
include_directories(2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral)
include_directories(2.Firmware/2.BLDC/seekfree_libraries/zf_common)
include_directories(2.Firmware/2.BLDC/seekfree_libraries/zf_driver)

add_executable(CH32_Bike_Overland
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Core/core_riscv.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Core/core_riscv.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_adc.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_adc.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_bkp.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_bkp.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_can.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_can.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_crc.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_crc.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_dac.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_dac.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_dbgmcu.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_dbgmcu.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_dma.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_dma.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_dvp.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_dvp.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_eth.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_eth.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_exti.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_exti.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_flash.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_flash.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_fsmc.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_fsmc.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_gpio.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_gpio.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_i2c.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_i2c.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_iwdg.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_iwdg.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_opa.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_opa.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_pwr.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_pwr.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_rcc.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_rcc.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_rng.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_rng.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_rtc.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_rtc.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_sdio.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_sdio.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_spi.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_spi.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_tim.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_tim.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_usart.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_usart.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_usbotg_device.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_usbotg_device.h
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_wwdg.c
        2.Firmware/1.CH32V307VCT6/libraries/sdk/Peripheral/ch32v30x_wwdg.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_clock.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_clock.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_debug.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_debug.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_fifo.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_fifo.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_font.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_font.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_function.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_function.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_headfile.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_interrupt.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_interrupt.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_common/zf_common_typedef.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_absolute_encoder.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_absolute_encoder.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_aht20.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_aht20.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_bluetooth_ch9141.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_bluetooth_ch9141.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_camera.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_camera.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_config.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_dl1a.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_dl1a.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_dm1xa.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_dm1xa.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_gps_tau1201.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_gps_tau1201.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_icm20602.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_icm20602.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_imu660ra.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_imu660ra.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_imu963ra.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_imu963ra.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_ips114.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_ips114.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_ips200.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_ips200.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_k24c02.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_k24c02.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_key.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_key.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_mpu6050.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_mpu6050.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_mt9v03x_dvp.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_mt9v03x_dvp.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_oled.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_oled.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_scc8660_dvp.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_scc8660_dvp.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_tft180.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_tft180.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_type.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_type.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_virtual_oscilloscope.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_virtual_oscilloscope.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_w25q32.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_w25q32.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_wifi_uart.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_wifi_uart.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_wireless_ch573.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_wireless_ch573.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_wireless_uart.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_device/zf_device_wireless_uart.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_adc.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_adc.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_delay.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_delay.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_dvp.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_dvp.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_encoder.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_encoder.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_exti.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_exti.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_flash.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_flash.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_gpio.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_gpio.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_iic.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_iic.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_pit.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_pit.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_pwm.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_pwm.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_soft_iic.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_soft_iic.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_soft_spi.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_soft_spi.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_spi.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_spi.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_timer.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_timer.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_uart.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_uart.h
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_usb_cdc.c
        2.Firmware/1.CH32V307VCT6/libraries/zf_driver/zf_driver_usb_cdc.h
        2.Firmware/1.CH32V307VCT6/project/code/INS/INS.c
        2.Firmware/1.CH32V307VCT6/project/code/INS/INS.h
        2.Firmware/1.CH32V307VCT6/project/code/INS/insapi.c
        2.Firmware/1.CH32V307VCT6/project/code/INS/insapi.h
        2.Firmware/1.CH32V307VCT6/project/code/INS/rtmodel.h
        2.Firmware/1.CH32V307VCT6/project/code/INS/rtwtypes.h
        2.Firmware/1.CH32V307VCT6/project/code/INS/zero_crossing_types.h
        2.Firmware/1.CH32V307VCT6/project/code/buzzer.c
        2.Firmware/1.CH32V307VCT6/project/code/buzzer.h
        2.Firmware/1.CH32V307VCT6/project/code/complementary_filter.c
        2.Firmware/1.CH32V307VCT6/project/code/complementary_filter.h
        2.Firmware/1.CH32V307VCT6/project/code/ctrl.c
        2.Firmware/1.CH32V307VCT6/project/code/ctrl.h
        2.Firmware/1.CH32V307VCT6/project/code/easy_key.c
        2.Firmware/1.CH32V307VCT6/project/code/easy_key.h
        2.Firmware/1.CH32V307VCT6/project/code/easy_ui.c
        2.Firmware/1.CH32V307VCT6/project/code/easy_ui.h
        2.Firmware/1.CH32V307VCT6/project/code/easy_ui_user_app.c
        2.Firmware/1.CH32V307VCT6/project/code/easy_ui_user_app.h
        2.Firmware/1.CH32V307VCT6/project/code/ellipsoid_fitting_process.c
        2.Firmware/1.CH32V307VCT6/project/code/ellipsoid_fitting_process.h
        2.Firmware/1.CH32V307VCT6/project/code/encoder.c
        2.Firmware/1.CH32V307VCT6/project/code/encoder.h
        2.Firmware/1.CH32V307VCT6/project/code/filter.c
        2.Firmware/1.CH32V307VCT6/project/code/filter.h
        2.Firmware/1.CH32V307VCT6/project/code/gps_ubx.c
        2.Firmware/1.CH32V307VCT6/project/code/gps_ubx.h
        2.Firmware/1.CH32V307VCT6/project/code/graph_mapping.c
        2.Firmware/1.CH32V307VCT6/project/code/graph_mapping.h
        2.Firmware/1.CH32V307VCT6/project/code/imu.c
        2.Firmware/1.CH32V307VCT6/project/code/imu.h
        2.Firmware/1.CH32V307VCT6/project/code/inc_all.h
        2.Firmware/1.CH32V307VCT6/project/code/inertial_navigation.c
        2.Firmware/1.CH32V307VCT6/project/code/inertial_navigation.h
        2.Firmware/1.CH32V307VCT6/project/code/ips096.c
        2.Firmware/1.CH32V307VCT6/project/code/ips096.h
        2.Firmware/1.CH32V307VCT6/project/code/ist8310.c
        2.Firmware/1.CH32V307VCT6/project/code/ist8310.h
        2.Firmware/1.CH32V307VCT6/project/code/jdy34.c
        2.Firmware/1.CH32V307VCT6/project/code/jdy34.h
        2.Firmware/1.CH32V307VCT6/project/code/moto.c
        2.Firmware/1.CH32V307VCT6/project/code/moto.h
        2.Firmware/1.CH32V307VCT6/project/code/my_math.c
        2.Firmware/1.CH32V307VCT6/project/code/my_math.h
        2.Firmware/1.CH32V307VCT6/project/code/pid.c
        2.Firmware/1.CH32V307VCT6/project/code/pid.h
        2.Firmware/1.CH32V307VCT6/project/code/profile_photo_erbws.c
        2.Firmware/1.CH32V307VCT6/project/code/profile_photo_erbws.h
        2.Firmware/1.CH32V307VCT6/project/code/sendware.c
        2.Firmware/1.CH32V307VCT6/project/code/sendware.h
        2.Firmware/1.CH32V307VCT6/project/code/ublox.c
        2.Firmware/1.CH32V307VCT6/project/code/ublox.h
        2.Firmware/1.CH32V307VCT6/project/code/user_flash.c
        2.Firmware/1.CH32V307VCT6/project/code/user_flash.h
        2.Firmware/1.CH32V307VCT6/project/code/vofa.c
        2.Firmware/1.CH32V307VCT6/project/code/vofa.h
        2.Firmware/1.CH32V307VCT6/project/user/inc/isr.h
        2.Firmware/1.CH32V307VCT6/project/user/src/isr.c
        2.Firmware/1.CH32V307VCT6/project/user/src/main.c
        2.Firmware/2.BLDC/bldc_config/bldc_config.h
        2.Firmware/2.BLDC/bldc_hardware/battery_adc.c
        2.Firmware/2.BLDC/bldc_hardware/battery_adc.h
        2.Firmware/2.BLDC/bldc_hardware/comparator.c
        2.Firmware/2.BLDC/bldc_hardware/comparator.h
        2.Firmware/2.BLDC/bldc_hardware/en_switch.c
        2.Firmware/2.BLDC/bldc_hardware/en_switch.h
        2.Firmware/2.BLDC/bldc_hardware/encoder.c
        2.Firmware/2.BLDC/bldc_hardware/encoder.h
        2.Firmware/2.BLDC/bldc_hardware/hall.c
        2.Firmware/2.BLDC/bldc_hardware/hall.h
        2.Firmware/2.BLDC/bldc_hardware/led.c
        2.Firmware/2.BLDC/bldc_hardware/led.h
        2.Firmware/2.BLDC/bldc_hardware/operational_amplifier.c
        2.Firmware/2.BLDC/bldc_hardware/operational_amplifier.h
        2.Firmware/2.BLDC/bldc_hardware/pwm_input.c
        2.Firmware/2.BLDC/bldc_hardware/pwm_input.h
        2.Firmware/2.BLDC/bldc_hardware/pwm_output.c
        2.Firmware/2.BLDC/bldc_hardware/pwm_output.h
        2.Firmware/2.BLDC/bldc_software/motor.c
        2.Firmware/2.BLDC/bldc_software/motor.h
        2.Firmware/2.BLDC/bldc_software/move_filter.c
        2.Firmware/2.BLDC/bldc_software/move_filter.h
        2.Firmware/2.BLDC/bldc_software/pid.c
        2.Firmware/2.BLDC/bldc_software/pid.h
        2.Firmware/2.BLDC/bldc_software/virtual_oscilloscope.c
        2.Firmware/2.BLDC/bldc_software/virtual_oscilloscope.h
        2.Firmware/2.BLDC/project/code/buzzer.c
        2.Firmware/2.BLDC/project/code/buzzer.h
        2.Firmware/2.BLDC/project/code/easing_function.c
        2.Firmware/2.BLDC/project/code/easing_function.h
        2.Firmware/2.BLDC/project/code/easy_key.c
        2.Firmware/2.BLDC/project/code/easy_key.h
        2.Firmware/2.BLDC/project/code/easy_ui.c
        2.Firmware/2.BLDC/project/code/easy_ui.h
        2.Firmware/2.BLDC/project/code/easy_ui_user_app.c
        2.Firmware/2.BLDC/project/code/easy_ui_user_app.h
        2.Firmware/2.BLDC/project/code/ips096.c
        2.Firmware/2.BLDC/project/code/ips096.h
        2.Firmware/2.BLDC/project/code/ips096_dma.c
        2.Firmware/2.BLDC/project/code/ips096_dma.h
        2.Firmware/2.BLDC/project/code/nmea0183.c
        2.Firmware/2.BLDC/project/code/nmea0183.h
        2.Firmware/2.BLDC/project/code/profile_photo_erbws.c
        2.Firmware/2.BLDC/project/code/profile_photo_erbws.h
        2.Firmware/2.BLDC/project/code/user_flash.c
        2.Firmware/2.BLDC/project/code/user_flash.h
        2.Firmware/2.BLDC/project/code/user_header.h
        2.Firmware/2.BLDC/project/code/user_spi.c
        2.Firmware/2.BLDC/project/code/user_spi.h
        2.Firmware/2.BLDC/project/code/vofa.c
        2.Firmware/2.BLDC/project/code/vofa.h
        2.Firmware/2.BLDC/project/user/inc/isr.h
        2.Firmware/2.BLDC/project/user/src/isr.c
        2.Firmware/2.BLDC/project/user/src/main.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Core/core_riscv.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Core/core_riscv.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_adc.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_adc.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_bkp.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_bkp.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_can.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_can.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_crc.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_crc.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_dac.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_dac.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_dbgmcu.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_dbgmcu.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_dma.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_dma.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_dvp.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_dvp.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_eth.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_eth.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_exti.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_exti.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_flash.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_flash.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_fsmc.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_fsmc.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_gpio.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_gpio.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_i2c.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_i2c.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_iwdg.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_iwdg.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_opa.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_opa.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_pwr.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_pwr.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_rcc.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_rcc.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_rng.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_rng.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_rtc.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_rtc.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_sdio.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_sdio.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_spi.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_spi.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_tim.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_tim.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_usart.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_usart.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_usbotg_device.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_usbotg_device.h
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_wwdg.c
        2.Firmware/2.BLDC/seekfree_libraries/sdk/Peripheral/ch32v30x_wwdg.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_clock.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_clock.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_debug.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_debug.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_fifo.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_fifo.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_font.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_font.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_function.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_function.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_headfile.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_interrupt.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_interrupt.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_common/zf_common_typedef.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_adc.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_adc.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_delay.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_delay.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_dvp.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_dvp.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_encoder.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_encoder.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_exti.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_exti.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_flash.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_flash.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_gpio.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_gpio.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_iic.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_iic.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_pit.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_pit.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_pwm.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_pwm.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_soft_iic.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_soft_iic.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_soft_spi.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_soft_spi.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_spi.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_spi.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_timer.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_timer.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_uart.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_uart.h
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_usb_cdc.c
        2.Firmware/2.BLDC/seekfree_libraries/zf_driver/zf_driver_usb_cdc.h)
